--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-data": "1.0.0-beta.17",
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
+    "ember-google-map": "0.0.21",
     "ember-validations": "2.0.0-alpha.3",
     "emberfire": "1.4.5"
   }
